<resources>
    <string name="app_name">FoodGiving</string>

    <string name="button_register">Registrarse</string>
    <string name="button_save">Guardar</string>
    <string name="title_activity_register">Registro</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="name">Nombre</string>
    <string name="lastName">Apellidos</string>
    <string name="nickName">Nombre de Usuario</string>
    <string name="mail">Correo</string>
    <string name="password">Contraseña</string>
    <string name="repeatPassword">Repetir contraseña</string>
    <string name="logIn">Iniciar sesión</string>
    <string name="title_activity_main_donate">Donador</string>

    <string name="donate_food">Donar Alimentos</string>
    <string name="list_donations">Listado de donaciones</string>
    <string name="rankings">Rankings</string>
    
    <string name="donor_user">Donador</string>
    <string name="recepto_user">Receptor</string>
    <string name="user_type">Tipo de usuario</string>
    <string name="title_activity_main_receptor">Transportista</string>
    
    <string name="collect_donations">Recoger donaciones</string>
    <string name="action_view_profile">Mi perfil</string>
    <string name="action_edit_profile">Editar perfil</string>
    <string name="action_disconnect">Cerrar sesión</string>

    <string name="user_id">Id de usuario</string>
    <string name="title_activity_view_profile">Ver perfil</string>

    <string name="address">Dirección</string>
    <string name="neighborhood">Barrio</string>
    <string name="district">Distrito</string>
    <string name="contact_phone">Teléfono de contacto</string>
    <string name="ranking_position">Posición ranking</string>
    <string name="title_activity_edit_profile">Editar perfil</string>
    <string name="street_name">Nombre de la calle</string>
    <string name="building_number">Número del edificio</string>
    <string name="floor">Piso</string>
    <string name="door">Puerta</string>
    <string name="city">Ciudad</string>
    <string name="title_activity_food_donation">Donación alimentos</string>
    <string name="productName">Nombre del producto</string>
    <string name="my_location">Mi ubicación</string>
    <string name="profile_location">Localización Perfil</string>
    <string name="button_donate">Donar</string>
    <string name="title_activity_donations">Listado de donaciones</string>
    <string name="title_activity_maps_sample">Mapa de donaciones</string>
    <string name="title_activity_login">Inicio de sesión</string>

    <string name="signed_in_fmt">signed_in_fmt</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">sign out</string>
    <string name="title_activity_all_donations_map">Mapa de donaciones</string>

    <string name="button_add_to_donation">Añadir a la donación</string>

    <string name="view_all_donations">Mapa de donaciones</string>
    <string name="title_activity_donation_detail">Detalle de la donación</string>
    <string name="Donation_day">Donación del dia </string>
    <string name="Initial_hour">Desde</string>
    <string name="Final_hour">Hasta</string>
    <string name="service_not_available">Servicio no disponible</string>
    <string name="invalid_lat_long_used">Latitud y longitud no validos</string>
    <string name="no_address_found">No se ha encontrado ninguna direccion</string>
    <string name="address_found">Direccion encontrada</string>
    <string name="radio_action">Radio de búsqueda</string>
    <string name="time_zone">Franja horaria</string>
    <string name="type_vehicle">Tipo de vehículo</string>
    <string name="my_donation_of">Mi donación del dia</string>
    <string name="state">Estado</string>
    <string name="transporter">Transportista</string>
    <string name="title_activity_donations_for_transport">Listado de donaciones</string>
    <string name="start_collecting">Iniciar la recogida</string>
    <string name="user">Usuario</string>
    <string name="phone">Teléfono</string>
    <string name="total_weight">Peso total</string>
    <string name="title_activity_collecting_donations">Recoger donaciones</string>
    <string name="to">a</string>
    <string name="collecting_date">Ruta del día</string>
    <string name="number_of_donations">Número total de donaciones</string>
    <string name="finalize_collect">Finalizar recogida</string>
    <string name="food_bank">Banco de alimentos</string>
    <string name="home">Casa</string>

    <string name="active_state">Activo</string>
    <string name="current_state">En curso</string>
    <string name="completed_state">Finalizado</string>
    <string name="all_state">Cualquier estado</string>
    <string name="title_activity_rankings">Rankings</string>
    <string name="donations">Donaciones</string>
    <string name="title_activity_best_collecting">Recoger donaciones</string>


    <string name="action_search">Buscar</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>

    <string name="nav_item_view_profile">Ver perfil</string>
    <string name="nav_item_edit_profile">Editar perfil</string>
    <string name="nav_item_actions">Acciones</string>
    <string name="nav_item_info">Información general</string>
    <string name="nav_item_help">Ayuda</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_view_profile</item>
        <item>@string/nav_item_edit_profile</item>
        <item>@string/nav_item_actions</item>
        <item>@string/nav_item_info</item>
        <item>@string/nav_item_help</item>
    </string-array>

    <string name="title_view_profile">Ver perfil</string>
    <string name="title_edit_profile">Editar perfil</string>
    <string name="title_actions">Acciones</string>

    <string name="facebook_app_id">1535066543479078</string>
    <string name="personal_info">Información personal</string>
    <string name="personal_contact_info">Información de contacto</string>
    <string name="transporter_info">Información del transportista</string>
    <string name="ranking">Ranking</string>
    <string name="donation_location">Localización de la donación</string>
    <string name="donation_value">Contenido de la donación</string>
    <string name="button_donation_desc">¡Empieza creando una nueva donación pulsando el siguiente botón!</string>
    <string name="button_list_donations_desc">¡Visualiza todas tus donaciones y sus estados!</string>
    <string name="button_rankings_desc">¡Consulta tu posición en los diferentes rankings!</string>
    <string name="button_list_donations_for_transporter">¡Dale un vistazo a todas las donaciones que están en curso o están pendiente de recoger!</string>
    <string name="button_best_track_desc">¡Empieza de inmediato a recoger donaciones pulsando el siguiente botón!</string>
    <string name="button_all_donations_map_desc">!Visualiza todas las donaciones y sus estados en una mapa de la ciudad!</string>
    <string name="general_info">Información general</string>
    <string name="route_info">Ruta</string>
    <string name="info_for_users">La aplicación FoodGiving es una aplicación sin animo de lucro que esta enfocada íntegramente
    al tercer sector, la aplicación se centra principalmente en unos de los mayores problemas que tenemos en nuestro pais, la
    falta y malgasto de alimentos, FoodGiving pretende utilizar la potencia de las nuevas tecnologias móbiles para fomentar, concienciar y
    facilitar la donación de alimentos.</string>
    <string name="info_food_bank">El banco de alimentos de Barcelona es una entidad social que trabaja desde hace muchos años
    combatiendo el problema de la falta de alimentos, se encarga principalmente de recuperar los excedentes de
     la indústria alimentaria, recoger donaciones de alimentos y posteriormente hacer llegar estas donaciones a
    los puntos de recogida para que lleguen a la gente que lo necesite</string>
    <string name="link_food_bank_page">www.bancdelsaliments.org</string>
    <string name="init_nav">Iniciar navegación</string>
    <string name="main_function_of_transporter">La principal función que tiene un usuario transportista es la de poder recoger el máximo
    número de donaciones y llevarlas a su destino final el Banco de alimentos, FoodGiving te ofrece la oportunidad de llenarte de solidaridad
    gracias a tres acciones principales</string>
    <string name="description_of_types_vehicles">A continuación se muestran los diferentes iconos que representan los diferentes vehiculos que
    un transportista puede llevar para realizar sus recogidas</string>
    <string name="truck_description">El camión es el tipo de vehiculo más pesado por lo que soporta una cantidad máxima de 800kg</string>
    <string name="van_description">La furgoneta es el segundo tipo de vehiculo más pesado por lo que soporta una cantidad máxima de 400kg</string>
    <string name="car_description">El coche es uno de los transportes más comunes en la grandes ciudade y soporta una cantidad máxima de 200kg</string>
    <string name="motorcycle_description">La motocicleta es el transporte más pequeño y a la vez mas ágil por lo que soporta una cantidad màxima de 5kg</string>
</resources>
