<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical"
    tools:context="com.uab.es.cat.foodnetwork.ActionsFragment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true">

            <Button
                android:text="@string/donate_food"
                android:onClick="donate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/list_donations"
                android:onClick="listDonations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/rankings"
                android:onClick="rankings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
</RelativeLayout>